--- a/index.html
+++ b/index.html
@@ -61,6 +61,17 @@
         </div>
         <div class="section1__main">
             <div class="section1__main-content">
+                <div class="news__block">
+                   
+                    <div id="vk_post_-184983806_3227"></div>
+                    <script type="text/javascript">
+                    (function(d, s, id) { var js, fjs = d.getElementsByTagName(s)[0]; if (d.getElementById(id)) return; js = d.createElement(s); js.id = id; js.src = "https://vk.com/js/api/openapi.js?168"; fjs.parentNode.insertBefore(js, fjs); }(document, 'script', 'vk_openapi_js'));
+                    (function() {
+                        if (!window.VK || !VK.Widgets || !VK.Widgets.Post || !VK.Widgets.Post('vk_post_-184983806_3227', -184983806, 3227, '9wlV9Py3ocUW86sS4ogaLiYooF0', {width: 700})) setTimeout(arguments.callee, 50);
+                    }());
+                    </script>
+                    
+                </div>
             </div>
             <div class="section1__partners"></div>
         </div>
