--- a/index.html
+++ b/index.html
@@ -160,9 +160,9 @@
                     <img src="./img/little-group.jpg" alt="Little group" class="group__card-pic group__card-pic_size_lg">
                     <div class="mask">
                         <h2>ДОШКОЛЬНЫЕ ГРУППЫ</h2>
-                        <p>— 2-й микрорайон, 6 корпус А (д/сад 122)<br>
-                            — ул. Сады Зауралья, 6 корпус Б (д/сад 122)<br>
-                            — 3-й микрорайон, 18 (д/сад 135)<br></p>
+                        <p> 2-й микрорайон, 6 корпус А (д/сад 122)</p>
+                        <p> ул. Сады Зауралья, 6 корпус Б (д/сад 122)</p>
+                        <p> 3-й микрорайон, 18 (д/сад 135)</p>
                     </div>
                 </figure>
 
@@ -170,18 +170,18 @@
                     <img src="./img/older-group2.jpg" alt="Older group" class="group__card-pic group__card-pic_size_lg">
                     <div class="mask">
                         <h2>НАЧАЛЬНЫЕ ГРУППЫ</h2>
-                        <p>— ул. Сергея Васильева, 7 (СОШ 29) <br>
-                            — ул. Кирова, 52 (СОШ 42) <br>
-                            — ул. Станционная, 44 (СОШ 36)<br>
-                            — ул. Алексеева, 14 (СОШ 52)<br>
-                            — ул. 1-й микрорайон, 7 (СОШ 20)<br>
-                            — ул. 3-й микрорайон, 32 корп. А (СОШ 7)<br>
-                            — ул. 5-й микрорайон, 15 (Гимназия 19)<br>
-                            — ул. 5-й микрорайон, 23 (СОШ 56)<br>
-                            — ул. Анфиногенова, 66 (СОШ 24)<br>
-                            — ул. Отдыха, 7 а (СОШ 28)<br>
-                            — ул. Дзержинского, 46 (СОШ 46)<br>
-                            — ул. Дзержинского, 3 (СОШ 9)<br></p>
+                        <p>ул. Сергея Васильева, 7 (СОШ 29) </p>
+                        <p> ул. Кирова, 52 (СОШ 42) </p>
+                        <p> ул. Станционная, 44 (СОШ 36)</p>
+                        <p> ул. Алексеева, 14 (СОШ 52)</p>
+                        <p> ул. 1-й микрорайон, 7 (СОШ 20)</p>
+                        <p> ул. 3-й микрорайон, 32 корп. А (СОШ 7)</p>
+                        <p> ул. 5-й микрорайон, 15 (Гимназия 19)</p>
+                        <p> ул. 5-й микрорайон, 23 (СОШ 56)</p>
+                        <p> ул. Анфиногенова, 66 (СОШ 24)</p>
+                        <p> ул. Отдыха, 7 а (СОШ 28)</p>
+                        <p> ул. Дзержинского, 46 (СОШ 46)</p>
+                        <p> ул. Дзержинского, 3 (СОШ 9)</p>
                     </div>
                 </figure>
             </div>
